fix: Update based on browser fallback and rules for gap
Per feedback https://github.com/WPMedia/arc-themes-blocks/pull/1335#pullrequestreview-969971133

--- a/.storybook/themes/news.scss
+++ b/.storybook/themes/news.scss
@@ -152,7 +152,7 @@
 				),
 				right-rail-rail-container: (
 					grid-template-columns: 2fr 1fr,
-					gap: initial,
+					gap: normal,
 					grid-template-rows: initial,
 				),
 				right-rail-main-side-rail: (
@@ -167,7 +167,7 @@
 				),
 				right-rail-advanced-rail-container: (
 					grid-template-columns: 2fr 1fr,
-					gap: initial,
+					gap: normal,
 					grid-template-rows: initial,
 				),
 				right-rail-advanced-main-side-rail: (
